# NES-emulator

./: .gitignore  CMakeLists.txt  README.md  makefile
inc/: cpu_ram.h  interpreter.h  system.h  utility.h
include/: cpu_ram.h
src/: cpu.cpp  cpu.h  cpu_ram.cpp  interpreter.cpp  interpreter.h  main.cpp  memory.cpp  memory.h  palettes.h  ppu.cpp  ppu.h  rom.cpp  rom.h  rom_header.cpp  rom_header.h  system.cpp  system.h
src/cpu/: alu.h  control.h  cpu.cpp  cpu.h  instruction_argument.cpp  instruction_table.h  rmw.h
src/interpreter/: alu.h  control.h  rmw.h
src/mappers/: mapper0.h
test/: test_interpreter.cpp
